// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outline renders a list of functions when properties change 1`] = `
<div
  className="outline"
>
  <div>
    <OutlineFilter
      filter=""
      updateFilter={[Function]}
    />
    <ul
      className="outline-list devtools-monospace"
      dir="ltr"
    >
      <li
        className="outline-list__element"
        key="my_example_function1:21:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function1",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="my_example_function2:22:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function2",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer"
    >
      <button
        className=""
        onClick={[MockFunction]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline renders outline renders functions by function class 1`] = `
<div
  className="outline"
>
  <div>
    <OutlineFilter
      filter=""
      updateFilter={[Function]}
    />
    <ul
      className="outline-list devtools-monospace"
      dir="ltr"
    >
      <li
        className="outline-list__class"
        key="x_klass"
      >
        <h2
          className=""
          onClick={[Function]}
        >
          <div>
            <span
              className="keyword"
            >
              class
            </span>
             
            x_klass
          </div>
        </h2>
        <ul
          className="outline-list__class-list"
        >
          <li
            className="outline-list__element"
            key="x_function:25:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "x_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
        </ul>
      </li>
      <li
        className="outline-list__class"
        key="a_klass"
      >
        <h2
          className=""
          onClick={[Function]}
        >
          <div>
            <span
              className="keyword"
            >
              class
            </span>
             
            a_klass
          </div>
        </h2>
        <ul
          className="outline-list__class-list"
        >
          <li
            className="outline-list__element"
            key="a2_function:30:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "a2_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
          <li
            className="outline-list__element"
            key="a1_function:70:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "a1_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
        </ul>
      </li>
    </ul>
    <div
      className="outline-footer"
    >
      <button
        className=""
        onClick={[MockFunction]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline renders outline renders functions by function class, alphabetically 1`] = `
<div
  className="outline"
>
  <div>
    <OutlineFilter
      filter=""
      updateFilter={[Function]}
    />
    <ul
      className="outline-list devtools-monospace"
      dir="ltr"
    >
      <li
        className="outline-list__class"
        key="a_klass"
      >
        <h2
          className=""
          onClick={[Function]}
        >
          <div>
            <span
              className="keyword"
            >
              class
            </span>
             
            a_klass
          </div>
        </h2>
        <ul
          className="outline-list__class-list"
        >
          <li
            className="outline-list__element"
            key="a1_function:70:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "a1_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
          <li
            className="outline-list__element"
            key="a2_function:30:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "a2_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
        </ul>
      </li>
      <li
        className="outline-list__class"
        key="x_klass"
      >
        <h2
          className=""
          onClick={[Function]}
        >
          <div>
            <span
              className="keyword"
            >
              class
            </span>
             
            x_klass
          </div>
        </h2>
        <ul
          className="outline-list__class-list"
        >
          <li
            className="outline-list__element"
            key="x_function:25:undefined"
            onClick={[Function]}
            onContextMenu={[Function]}
          >
            <span
              className="outline-list__element-icon"
            >
              λ
            </span>
            <PreviewFunction
              func={
                Object {
                  "name": "x_function",
                  "parameterNames": undefined,
                }
              }
            />
          </li>
        </ul>
      </li>
    </ul>
    <div
      className="outline-footer"
    >
      <button
        className="active"
        onClick={[MockFunction]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline renders outline renders ignore anonymous functions 1`] = `
<div
  className="outline"
>
  <div>
    <OutlineFilter
      filter=""
      updateFilter={[Function]}
    />
    <ul
      className="outline-list devtools-monospace"
      dir="ltr"
    >
      <li
        className="outline-list__element"
        key="my_example_function1:21:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "my_example_function1",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer"
    >
      <button
        className=""
        onClick={[MockFunction]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;

exports[`Outline renders outline renders loading if symbols are loading 1`] = `
<div
  className="outline-pane-info"
>
  Loading…
</div>
`;

exports[`Outline renders outline renders loading if symbols is not defined 1`] = `
<div
  className="outline-pane-info"
>
  Loading…
</div>
`;

exports[`Outline renders outline renders placeholder \`No File Selected\` if selectedSource is not defined 1`] = `
<div
  className="outline-pane-info"
>
  No file selected
</div>
`;

exports[`Outline renders outline renders placeholder \`No functions\` if all func are anonymous 1`] = `
<div
  className="outline-pane-info"
>
  No functions
</div>
`;

exports[`Outline renders outline renders placeholder \`No functions\` if symbols has no func 1`] = `
<div
  className="outline-pane-info"
>
  No functions
</div>
`;

exports[`Outline renders outline sorts functions alphabetically by function name 1`] = `
<div
  className="outline"
>
  <div>
    <OutlineFilter
      filter=""
      updateFilter={[Function]}
    />
    <ul
      className="outline-list devtools-monospace"
      dir="ltr"
    >
      <li
        className="outline-list__element"
        key="a_function:70:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "a_function",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="c_function:25:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "c_function",
              "parameterNames": undefined,
            }
          }
        />
      </li>
      <li
        className="outline-list__element"
        key="x_function:30:undefined"
        onClick={[Function]}
        onContextMenu={[Function]}
      >
        <span
          className="outline-list__element-icon"
        >
          λ
        </span>
        <PreviewFunction
          func={
            Object {
              "name": "x_function",
              "parameterNames": undefined,
            }
          }
        />
      </li>
    </ul>
    <div
      className="outline-footer"
    >
      <button
        className="active"
        onClick={[MockFunction]}
      >
        Sort by name
      </button>
    </div>
  </div>
</div>
`;
